Add comunica intro

--- a/index.html
+++ b/index.html
@@ -632,6 +632,26 @@
       </ul>
     </section>
     
+    <section id="comunica" class="slide" inlist="" rel="schema:hasPart" resource="#comunica">
+        <h2 property="schema:name">The following will make use of Comunica</h2>
+        <center><img src="img/comunica_white_on_red.svg" width="20%" style="float: right" /></center>
+		<ul>
+			<li>
+				<h3>Flexible and Modular Meta-Query Engine</h3>
+				<span class="indent">Building blocks to build engine with specific functionality</span><br \>
+                <span class="indent">Presets like Comunica SPARQL, Comunica SPARQL Solid</span>
+			</li>
+			<li>
+				<h3>Open-source</h3>
+				<span class="indent">Available under the MIT license</span>
+			</li>
+			<li>
+				<h3>Implemented in TypeScript</h3>
+				<span class="indent">Can be used in any JavaScript application or from the command line</span>
+			</li>
+		</ul>
+    </section>
+    
     <section id="index-final" class="slide index" inlist="" rel="schema:hasPart" resource="#index-final">
       <ul>
         <li><a href="#index-fundamentals">Fundamentals of Query Processing</a></li>
