--- a/index.html
+++ b/index.html
@@ -786,7 +786,21 @@
     </section>
 	
     <section id="conclusion" class="slide" inlist="" rel="schema:hasPart" resource="#conclusion">
-      <h2 property="schema:name" class="big">TODO: Conclusion</h2>
+      <h2 property="schema:name" class="big">Conclusions</h2>
+	  <ul>
+	  	<li>
+              <h3>SPARQL querying as abstraction layer</h3>
+              <span class="indent">Read/write Linked Data using simple declarative queries</span>
+	  	</li>
+	  	<li>
+              <h3>Querying over multiple sources</h3>
+              <span class="indent">Federated querying or link traversal</span>
+	  	</li>
+	  	<li>
+              <h3>Comunica</h3>
+              <span class="indent">Open-source TS/JS engine providing abstraction layer</span>
+	  	</li>
+	  </ul>
     </section>
 
     <footer>
