Fix minor issues

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </li>
           <li>
           	  <h3>W3C recommendation</h3>
-			  <span class="indent">SPARQL 1.1 (21 March 2023)</span><br \>
+			  <span class="indent">SPARQL 1.1 (21 March 2013)</span><br \>
               <span class="indent">SPARQL 1.2 (Upcoming mid-2024)</span>
           </li>
           <li>
@@ -234,7 +234,7 @@
       </ul>
     </section>
     
-        <section id="basics-restrict" class="slide" inlist="" rel="schema:hasPart" resource="#basics-restrict">
+        <section id="basics-restrict" class="slide" inlist="" rel="schema:hasPart" resource="#basics-restrict" style="font-size: 0.95em">
           <h2 property="schema:name">Basic Graph Patterns enable graph pattern matching</h2>
           <ul>
               <li>
@@ -368,9 +368,9 @@
           <li>
           	  <h3>Factors that influence performance</h3>
               <span class="indent">Dataset</span><br /><br />
+              <span class="indent">Available data indexes</span><br /><br />
 			  <span class="indent">Order of operators in AST</span><br /><br />
-              <span class="indent">Available operator algorithm implementations</span><br /><br />
-              <span class="indent">Available data indexes</span>
+              <span class="indent">Available operator algorithm implementations</span>
           </li>
       </ul>
     </section>
@@ -478,11 +478,11 @@
 		<ul>
 			<li>
 				<h3>Federated Query Processing</h3>
-				<span class="indent">Distributing query execution across multiple query APIs</span>
+				<span class="indent">Distributing query execution across <em>known</em> sources</span>
 			</li>
 			<li>
 				<h3>Link Traversal Query Processing</h3>
-				<span class="indent">Local query execution over sources that are discovered by following links</span>
+				<span class="indent">Local query execution over sources that are <em>discovered</em> by following links</span>
 			</li>
 		</ul>
     </section>
