--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
               </li>
               <li>
     <pre style="font-size: 0.8em">    ?person a dbpedia-owl:Artist.
-        ?person rdfs:label ?name.
-        ?person dbpedia-owl:birthPlace ?birthPlace.
+    ?person rdfs:label ?name.
+    ?person dbpedia-owl:birthPlace ?birthPlace.
     </pre></li>
           <li>
           	  <h3>Triple Pattern</h3>
@@ -742,7 +742,7 @@
         <h2 property="schema:name">💻 Using Comunica in a JS app</h2>
 		<ul>
 			<li>
-				<h3>Querying from a single source (memory or remote)</h3>
+				<h3>Querying from a single source</h3>
 				<span class="indent">Using <code>@comunica/query-sparql</code></span>
 			</li>
 			<li>
@@ -753,7 +753,6 @@
 				<h3>Link traversal querying over Solid pods</h3>
 				<span class="indent">Using <code>@comunica/query-sparql-link-traversal-solid</code></span>
 			</li>
-            Demo code: <a href="https://github.com/rubensworks/vaia-webquerying-intro-code">https://github.com/rubensworks/vaia-webquerying-intro-code</a>
 		</ul>
     </section>
     
